[package]
name = "agora"
version = "0.2.0"
edition = "2021"
description = "Paid API sampler comparing x402 and MPP payment protocols"
license = "MIT"
repository = "https://github.com/StevenGeller/agora"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = "0.5"
tower-http = { version = "0.6", features = ["fs", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
hex = "0.4"
alloy-primitives = "1.4"
alloy-signer = "1"
alloy-signer-local = "1.4"
alloy-provider = { version = "1", default-features = false, features = ["reqwest"] }
alloy-sol-types = "1"
alloy-network = "1"
alloy-rpc-types = "1"
alloy-contract = "1"
x402-axum = "1.4.5"
x402-chain-eip155 = { version = "1.4.4", features = ["client", "server"] }
x402-reqwest = "1.4.4"
x402-types = "1.4.4"

[profile.release]
opt-level = 3
lto = true
